--- a/styles.css
+++ b/styles.css
@@ -5,36 +5,78 @@ body{
    background-repeat: no-repeat;
    background-size: cover;
  }
- .parent {
-    position: absolute;
-    
-  }
-.child{
-    position: relative;
-    height: 700px;
-    width: 450px;
-    background-color:  white;
-    
-    border-radius: 20px;
-    margin-top:50%;
-    margin-left:50% ;
-    margin-right: 50%;
-    text-align: center;
+ .container{
   
-       
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  height:100%;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+ }
+ 
+.center{
+    
+  height: 700px;
+  width: 450px;
+  background-color: white;
+  border-radius: 20px;
+  text-align: center;
+  box-shadow: 0 30px 25px 0px #CAD4F8;
+  
+  align-items: center;
+    
 }
 #id1
 {
     border-radius: 20px 20px 0 0;
 }
 p{
-    font-size: 16px;
-    color: hsl(223, 47%, 23%);
-    font-weight: 700;
-    font-family: 'Red Hat Display';
+  font-family: 'Red Hat Display';
+ 
 }
 
 .child_heading{
-  margin-top: 15px;
-  margin-bottom: 15px;
+
+    color: hsl(223, 47%, 23%);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-weight: 900;
+}
+
+.child_des{
+
+  color: hsl(224, 23%, 55%);
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+.plan{
+
+  font-weight: 900;
+  color: hsl(223, 47%, 23%);
+  margin-bottom: 75px;
+
+}
+.payment {
+  color: white;
+  margin: 0 auto;
+  width: 350px;
+  height: 50px;
+  background-color: #382AE1;
+  border-radius: 10px;
+  font-weight: 900;
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.plan img {
+  float: left;
+  margin-left: 90px;
+ 
 }
